[metadata]
name = naverscrap-brendonlch
version = 1.0.0
author = Brendon Lim
author_email = brendonlim96@hotmail.com
description = A Naver News Scraping tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brendonlch/naverscrap
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src